Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23915

error ER_KILL_DENIED_ERROR not passed a thread id

    XMLWordPrintable

Details

    Description

      While importing 10.5.5 to Debian, I noticed it is constantly failing on this test on arch powerpc:

      main.grant_kill                          w15 [ fail ]
              Test ended at 2020-10-07 22:22:01
       
      CURRENT_TEST: main.grant_kill
      --- /<<PKGBUILDDIR>>/mysql-test/main/grant_kill.result	2020-08-07 12:57:35.000000000 +0000
      +++ /<<PKGBUILDDIR>>/mysql-test/main/grant_kill.reject	2020-10-07 22:22:01.121564314 +0000
      @@ -20,7 +20,7 @@
       foo
       root
       KILL ID;
      -ERROR HY000: You are not owner of thread ID
      +ERROR HY000: You are not owner of thread 0
       disconnect foo;
       disconnect bar;
       connection default;
      

      See build example at
      https://buildd.debian.org/status/fetch.php?pkg=mariadb-10.5&arch=powerpc&ver=1%3A10.5.5-3%7Eexp2&stamp=1602109617&raw=0

      Build passes since the debian/rules file is set to ignore powerpc test failures as in previous MariaDB versions there were way too many.

      There is nothing to check in previous MariaDB versions since this check didn't exist until 10.5 when introduced by bar in a1e330de5a37f88339f4a5b46231a41eb60f43d2

      Attachments

        Activity

          People

            danblack Daniel Black
            otto Otto Kekäläinen
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.75h
                0.75h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.