MDEV-23915 ER_KILL_DENIED_ERROR not passed a thread id (part 2)

Per Marko's comment in JIRA, sql_kill is passing the thread id
as long long. We change the format of the error messages to match,
and cast the thread id to long long in sql_kill_user.